vlib/v/parser/tests/generic_multiple_receiver_method_has_no_generic_names_err.vv
struct Queue<A, B>{
	buffer []A
	size   B
}

fn (q Queue<A, B>) poll() A {
	return q.buffer[0]
}

fn main() {
	q := Queue<string, int>{}
	println(q)
}
